# CoilsCL

./: Angles.csv  CMakeLists.txt  README.md
FunctionCollections/: CVFunctions.cpp  CVFunctions.hpp
archive/: PolarityTests.cpp  anglededuction.cpp  csvSweep.cpp  fakeGradients.cpp  main.cpp  sweep.cpp  sweepPSU.cpp
include/: cameraGeneric.hpp  main.h  precomputation.hpp
src/: ControllerPrototype.cpp  CurrentPSU.cpp  FMPimgProc.cpp  PolarityTests.cpp  anglededuction.cpp  angledeductionLIVE.cpp  csvSweep.cpp  csvSweepMULTI.cpp  csv_Step_Introducer.cpp  fakeGradients.cpp  main.cpp  precomputations.cpp  run_camera.cpp  sweep.cpp  sweepDemo.cpp  sweepNsave.cpp  sweepPSU.cpp  thresholds_cal.cpp
